[package]
name = "rustpi_io"
version = "0.1.0"
authors = ["Tom Meyer<tom.meyer89@gmail.com>"]
license = "GPL-3.0"
description = "RustpiIO is a library to read and write to the SPI bus and the GPIO pins of a Raspberry Pi."
keywords = ["raspberry", "pi", "gpio", "spi"]
repository = "https://github.com/Skasselbard/rustpiIO"
exclude = ["src/bin/*", ".cargo/*", ".vscode/*"]
documentation = "https://skasselbard.github.io/rustpiIO/"

[dependencies]
spidev = "0.3.0"
